# NATM

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  run.py
config/: default.yaml
dashboard_examples/: aviation_cargo_baseline_dashboard.py  aviation_passenger_baseline_dashboard.py  cartographic_dashboard.py  common_case_dashboard.py  maritime_cargo_baseline_dashboard.py  maritime_passenger_baseline_dashboard.py
data/baseline-cargo-transition/: aviation_fleet_stock.csv  aviation_scenario.csv  aviation_technology_catalog.csv  scenario.yaml
data/baseline-maritime-cargo-transition/: corridors.csv  countries.csv  maritime_fleet_stock.csv  maritime_scenario.csv  maritime_technology_catalog.csv  scenario.yaml
data/baseline-maritime-passenger-transition/: corridors.csv  countries.csv  maritime_fleet_stock.csv  maritime_scenario.csv  maritime_technology_catalog.csv  scenario.yaml
data/baseline-passenger-transition/: aviation_activity_profiles.csv  aviation_fleet_stock.csv  countries.csv  scenario.yaml
data/baseline-transition/: aviation_scenario.csv  aviation_technology_catalog.csv  corridors.csv  scenario.yaml
data/risk-attitudes-comparison/: README.md  aviation_activity_profiles.csv  aviation_fleet_stock.csv  aviation_scenario.csv  aviation_technology_catalog.csv  corridors.csv  countries.csv  scenario.yaml
docs/: architecture.md  aviation-cargo-scenario-reference.md  aviation-passenger-mesa-port.md  aviation-passenger-reference.md  aviation-passenger-render-gap-map.md  aviation-preprocessing-guide.md  aviation-scenario-reference.md  dashboard-guide.md  investment-logic-guide.md  maritime-cargo-reference.md  maritime-cargo-render-gap-map.md  maritime-passenger-reference.md
navaero_transition_model/: __init__.py  __main__.py  cli.py
navaero_transition_model/aviation_preprocessing/: __init__.py  activity_profiles.py  aircraft_type_mapping.py  airport_metadata.py  allocation.py  baseline.py  calibration.py  cli.py  common.py  filters.py  flight_activity_fuel.py  flightlists.py  matching.py  mission_profile.py  openap_backend.py  opensky_aircraft_db.py  pipeline.py  stock_cleaner.py
navaero_transition_model/core/: __init__.py  environment.py  model.py  policy.py  scenario.py
navaero_transition_model/postprocessing/: __init__.py  airport_fuel_allocation.py  (+1 more)
tests/: test_airport_fuel_allocation.py  test_ambiguity_aware_decision.py  test_aviation_preprocessing.py  test_robust_loss.py  test_smoke.py
(+89 files in other folders)
