[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navaero-transition-model"
version = "0.1.0"
description = "Technology transition diffusion model for aviation and maritime systems"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Manish Gaebelein-Khanra" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mesa>=3.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.0",
    "ruff>=0.6",
]
dashboard = [
    "altair>=5.0",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "solara>=1.40",
    "solara-server[starlette]>=1.40",
    "starlette<1",
]
openap = [
    "openap>=2.0",
]

[project.scripts]
natm = "navaero_transition_model.cli:main"
navaero-transition-model = "navaero_transition_model.cli:main"
natm-aviation-preprocess = "navaero_transition_model.aviation_preprocessing.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["navaero_transition_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["navaero_transition_model", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
